mips2c.output
Terminals unused in grammar

   PP


Grammar

    0 $accept: S $end

    1 S: codigo

    2 codigo: text data
    3       | data text
    4       | data
    5       | text

    6 data: DATA EOL definiciones

    7 definiciones: definicion
    8             | definicion definiciones

    9 definicion: ETIQPP TIPO valores EOL

   10 valores: VALOR
   11        | VALOR C valores

   12 text: TEXT EOL globl

   13 globl: GLOBL ETIQ EOL bloques

   14 bloques: ETIQPP EOL instrucciones EOL
   15        | bloques ETIQPP EOL instrucciones EOL

   16 instrucciones: instruccion
   17              | instrucciones instruccion

   18 instruccion: ETIQ operadores EOL
   19            | SYSCALL EOL
   20            | EOL

   21 operadores: OPR C OPR C OPR
   22           | OPR C OPR C VALOR
   23           | OPR C VALOR P1 OPR P2
   24           | OPR C OPR C ETIQ
   25           | ETIQ
   26           | OPR C ETIQ


Terminals, with rules where they appear

$end (0) 0
error (256)
DATA (258) 6
TEXT (259) 12
GLOBL (260) 13
SYSCALL (261) 19
PP (262)
C (263) 11 21 22 23 24 26
EOL (264) 6 9 12 13 14 15 18 19 20
P1 (265) 23
P2 (266) 23
ETIQ (267) 13 18 24 25 26
OPR (268) 21 22 23 24 26
TIPO (269) 9
VALOR (270) 10 11 22 23
ETIQPP (271) 9 14 15


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
S (18)
    on left: 1, on right: 0
codigo (19)
    on left: 2 3 4 5, on right: 1
data (20)
    on left: 6, on right: 2 3 4
definiciones (21)
    on left: 7 8, on right: 6 8
definicion (22)
    on left: 9, on right: 7 8
valores (23)
    on left: 10 11, on right: 9 11
text (24)
    on left: 12, on right: 2 3 5
globl (25)
    on left: 13, on right: 12
bloques (26)
    on left: 14 15, on right: 13 15
instrucciones (27)
    on left: 16 17, on right: 14 15 17
instruccion (28)
    on left: 18 19 20, on right: 16 17
operadores (29)
    on left: 21 22 23 24 25 26, on right: 18


State 0

    0 $accept: . S $end

    DATA  shift, and go to state 1
    TEXT  shift, and go to state 2

    S       go to state 3
    codigo  go to state 4
    data    go to state 5
    text    go to state 6


State 1

    6 data: DATA . EOL definiciones

    EOL  shift, and go to state 7


State 2

   12 text: TEXT . EOL globl

    EOL  shift, and go to state 8


State 3

    0 $accept: S . $end

    $end  shift, and go to state 9


State 4

    1 S: codigo .

    $default  reduce using rule 1 (S)


State 5

    3 codigo: data . text
    4       | data .

    TEXT  shift, and go to state 2

    $default  reduce using rule 4 (codigo)

    text  go to state 10


State 6

    2 codigo: text . data
    5       | text .

    DATA  shift, and go to state 1

    $default  reduce using rule 5 (codigo)

    data  go to state 11


State 7

    6 data: DATA EOL . definiciones

    ETIQPP  shift, and go to state 12

    definiciones  go to state 13
    definicion    go to state 14


State 8

   12 text: TEXT EOL . globl

    GLOBL  shift, and go to state 15

    globl  go to state 16


State 9

    0 $accept: S $end .

    $default  accept


State 10

    3 codigo: data text .

    $default  reduce using rule 3 (codigo)


State 11

    2 codigo: text data .

    $default  reduce using rule 2 (codigo)


State 12

    9 definicion: ETIQPP . TIPO valores EOL

    TIPO  shift, and go to state 17


State 13

    6 data: DATA EOL definiciones .

    $default  reduce using rule 6 (data)


State 14

    7 definiciones: definicion .
    8             | definicion . definiciones

    ETIQPP  shift, and go to state 12

    $default  reduce using rule 7 (definiciones)

    definiciones  go to state 18
    definicion    go to state 14


State 15

   13 globl: GLOBL . ETIQ EOL bloques

    ETIQ  shift, and go to state 19


State 16

   12 text: TEXT EOL globl .

    $default  reduce using rule 12 (text)


State 17

    9 definicion: ETIQPP TIPO . valores EOL

    VALOR  shift, and go to state 20

    valores  go to state 21


State 18

    8 definiciones: definicion definiciones .

    $default  reduce using rule 8 (definiciones)


State 19

   13 globl: GLOBL ETIQ . EOL bloques

    EOL  shift, and go to state 22


State 20

   10 valores: VALOR .
   11        | VALOR . C valores

    C  shift, and go to state 23

    $default  reduce using rule 10 (valores)


State 21

    9 definicion: ETIQPP TIPO valores . EOL

    EOL  shift, and go to state 24


State 22

   13 globl: GLOBL ETIQ EOL . bloques

    ETIQPP  shift, and go to state 25

    bloques  go to state 26


State 23

   11 valores: VALOR C . valores

    VALOR  shift, and go to state 20

    valores  go to state 27


State 24

    9 definicion: ETIQPP TIPO valores EOL .

    $default  reduce using rule 9 (definicion)


State 25

   14 bloques: ETIQPP . EOL instrucciones EOL

    EOL  shift, and go to state 28


State 26

   13 globl: GLOBL ETIQ EOL bloques .
   15 bloques: bloques . ETIQPP EOL instrucciones EOL

    ETIQPP  shift, and go to state 29

    $default  reduce using rule 13 (globl)


State 27

   11 valores: VALOR C valores .

    $default  reduce using rule 11 (valores)


State 28

   14 bloques: ETIQPP EOL . instrucciones EOL

    SYSCALL  shift, and go to state 30
    EOL      shift, and go to state 31
    ETIQ     shift, and go to state 32

    instrucciones  go to state 33
    instruccion    go to state 34


State 29

   15 bloques: bloques ETIQPP . EOL instrucciones EOL

    EOL  shift, and go to state 35


State 30

   19 instruccion: SYSCALL . EOL

    EOL  shift, and go to state 36


State 31

   20 instruccion: EOL .

    $default  reduce using rule 20 (instruccion)


State 32

   18 instruccion: ETIQ . operadores EOL

    ETIQ  shift, and go to state 37
    OPR   shift, and go to state 38

    operadores  go to state 39


State 33

   14 bloques: ETIQPP EOL instrucciones . EOL
   17 instrucciones: instrucciones . instruccion

    SYSCALL  shift, and go to state 30
    EOL      shift, and go to state 40
    ETIQ     shift, and go to state 32

    instruccion  go to state 41


State 34

   16 instrucciones: instruccion .

    $default  reduce using rule 16 (instrucciones)


State 35

   15 bloques: bloques ETIQPP EOL . instrucciones EOL

    SYSCALL  shift, and go to state 30
    EOL      shift, and go to state 31
    ETIQ     shift, and go to state 32

    instrucciones  go to state 42
    instruccion    go to state 34


State 36

   19 instruccion: SYSCALL EOL .

    $default  reduce using rule 19 (instruccion)


State 37

   25 operadores: ETIQ .

    $default  reduce using rule 25 (operadores)


State 38

   21 operadores: OPR . C OPR C OPR
   22           | OPR . C OPR C VALOR
   23           | OPR . C VALOR P1 OPR P2
   24           | OPR . C OPR C ETIQ
   26           | OPR . C ETIQ

    C  shift, and go to state 43


State 39

   18 instruccion: ETIQ operadores . EOL

    EOL  shift, and go to state 44


State 40

   14 bloques: ETIQPP EOL instrucciones EOL .
   20 instruccion: EOL .

    SYSCALL   reduce using rule 20 (instruccion)
    EOL       reduce using rule 20 (instruccion)
    ETIQ      reduce using rule 20 (instruccion)
    $default  reduce using rule 14 (bloques)


State 41

   17 instrucciones: instrucciones instruccion .

    $default  reduce using rule 17 (instrucciones)


State 42

   15 bloques: bloques ETIQPP EOL instrucciones . EOL
   17 instrucciones: instrucciones . instruccion

    SYSCALL  shift, and go to state 30
    EOL      shift, and go to state 45
    ETIQ     shift, and go to state 32

    instruccion  go to state 41


State 43

   21 operadores: OPR C . OPR C OPR
   22           | OPR C . OPR C VALOR
   23           | OPR C . VALOR P1 OPR P2
   24           | OPR C . OPR C ETIQ
   26           | OPR C . ETIQ

    ETIQ   shift, and go to state 46
    OPR    shift, and go to state 47
    VALOR  shift, and go to state 48


State 44

   18 instruccion: ETIQ operadores EOL .

    $default  reduce using rule 18 (instruccion)


State 45

   15 bloques: bloques ETIQPP EOL instrucciones EOL .
   20 instruccion: EOL .

    SYSCALL   reduce using rule 20 (instruccion)
    EOL       reduce using rule 20 (instruccion)
    ETIQ      reduce using rule 20 (instruccion)
    $default  reduce using rule 15 (bloques)


State 46

   26 operadores: OPR C ETIQ .

    $default  reduce using rule 26 (operadores)


State 47

   21 operadores: OPR C OPR . C OPR
   22           | OPR C OPR . C VALOR
   24           | OPR C OPR . C ETIQ

    C  shift, and go to state 49


State 48

   23 operadores: OPR C VALOR . P1 OPR P2

    P1  shift, and go to state 50


State 49

   21 operadores: OPR C OPR C . OPR
   22           | OPR C OPR C . VALOR
   24           | OPR C OPR C . ETIQ

    ETIQ   shift, and go to state 51
    OPR    shift, and go to state 52
    VALOR  shift, and go to state 53


State 50

   23 operadores: OPR C VALOR P1 . OPR P2

    OPR  shift, and go to state 54


State 51

   24 operadores: OPR C OPR C ETIQ .

    $default  reduce using rule 24 (operadores)


State 52

   21 operadores: OPR C OPR C OPR .

    $default  reduce using rule 21 (operadores)


State 53

   22 operadores: OPR C OPR C VALOR .

    $default  reduce using rule 22 (operadores)


State 54

   23 operadores: OPR C VALOR P1 OPR . P2

    P2  shift, and go to state 55


State 55

   23 operadores: OPR C VALOR P1 OPR P2 .

    $default  reduce using rule 23 (operadores)
